--- a/src/components/Main-swiper/Swiper.scss
+++ b/src/components/Main-swiper/Swiper.scss
@@ -27,6 +27,8 @@
     height: 450px;
     margin: 0 auto;
     overflow: hidden;
+    display: flex;
+    // align-items: center;
     
     .main-swiper{
       width: 220px;
@@ -42,3 +44,25 @@
 
 
   }
+  /* Swiper navigatsiyasi tugmalari uchun stil */
+.prevleft,
+.prevrigt {
+  position: absolute;
+  top: 25%;
+  transform: translateY(-50%);
+  // background-color: rgba(0, 0, 0, 0.5);
+  color: blue;
+  border: none;
+  font-size: 20px;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.prevleft {
+  left: 10px;
+}
+
+.prevrigt {
+  right: 10px;
+}
