--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,6 +1,7 @@
 main{
     width: 100%;
     height: auto;
+    
 
     .Main-container{
         width: 1300px;
@@ -93,22 +94,374 @@ main{
             
 
         }
+        .Main-countes{
+            width: 1300px;
+            height: auto;
+            padding: 0 50px;
+            margin: 0 auto;
+    
+            .main-text{
+                padding: 35px 0;
+                h1{
+                    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                    font-weight: 800;
+                    font-size: 50px;
+                    letter-spacing: 5px;
+                    padding: 10px 0;
+                    // border-bottom: 2px solid red;
+                    // border-bottom-width: 5px;
+                    
+                }
+                hr{
+                    width: 50px;
+                    height: 5px;
+                    background: red;
+                    border: none;
+    
+                }
+            }
+    
+            .countes-parent{
+                width: 100%;
+                height: auto;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                gap: 50px;
+    
+                .boxses{
+                    width: 350px;
+                    height: 255px;
+                    overflow: hidden;
+                    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+                    --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -4px rgba(0, 0, 0, .1);
+                    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+                    border-radius: 20px 20px 0 0;
+                    .box-img{
+                        width: 100%;
+                        height: 76%;
+                        overflow: hidden;
+                        border-radius: 20px 20px 0 0;
+    
+                        img{
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            transition: transform 0.3s ease;
+    
+                            &:hover{
+                                transform: scale(1.2); // Hoverda kattalashish
+                            }
+                        }
+                   
+    
+    
+                    }
+    
+                    .box-title{
+                        width: 100%;
+                        height: 57px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        padding: 0 10px 0 35px;
+                        border-bottom: 3px solid red;
+    
+                        h2{
+                            font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+                        }
+    
+                        .img-slice{
+                            width: 80px;
+                            height: 45px;
+                            border-radius: 10px;
+                            box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+                            --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -4px rgba(0, 0, 0, .1);
+                            --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+                        }
+                    }
+                    
+                    
+    
+    
+                }
+            
+            }
+    
+        }
+        .Main-excursion{
+            width: 1300px;
+            height: auto;
+            margin: 0 auto;
+            padding: 0 50px;
+    
+            .Excursion-video{
+                width: 100%;
+                height: auto;
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: wrap;
+    
+                .ext-vido{
+                    width: 330px;
+                    height: 400px;
+                    position: relative;
+                    padding: 15px;
+    
+                    video{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        border-radius: 12px;
+    
+    
+                    }
+    
+                    img{
+                        width: 100px;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                    }
+    
+    
+                }
+            }
+        }
+        .Main-client{
+            width: 1300px;
+            height: auto;
+            margin: 0 auto;
+            padding: 0 50px;
+    
+            .Client-parent-video{
+                width: 100%;
+                height: auto;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+    
+    
+                .clinet-video{
+                    width: 330px;
+                    height: 400px;
+                    position: relative;
+                    padding: 15px;
+    
+                    video{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        border-radius: 12px;
+    
+                    }
+    
+                    img{
+                        width: 100px;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                    }
+    
+    
+                }
+    
+            }
+    
+        }
 
 
     }
-    .Main-countes{
-        width: 1300px;
-        height: auto;
-        padding: 0 50px;
-        margin: 0 auto;
 
-        .main-text{
-            padding: 35px 0;
+    .Main-Priorities{
+        width: 100%;
+        height: auto;
+        position: relative;
+        // margin: 80px 0;
+
+
+        .priorities-parent{
+            width: 100%;
+            height: 750px;
+            background: url(../.././../public/Main-img/prioritet-bg.4VHDpVMf.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            padding: 100px ;
+
+
+            .text{
+                width: 65%;
+                height: auto;
+                text-align: center;
+                margin: 0 auto;
+
+                .pr-h1{
+                    h1{
+                    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                    font-weight: 700;
+                    color: white;
+                    font-size: 50px;
+                    padding: 10px 0;
+
+                    }
+                    hr{
+                        width: 50px;
+                        height: 5px;
+                        border: none;
+                        background: red;
+                        margin: 0 auto;
+    
+                    }
+                }
+
+                p{
+                    padding: 20px 0 0 0;
+                    font-size: 17px;
+                    color: white;
+                    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                    font-weight: 700;
+                    line-height: 1.25;
+
+                }
+
+             
+            }
+
+            .boxses{
+                width: 1300px;
+                height: auto;
+                display: flex;
+                justify-content: space-around;
+                margin: 50px auto;
+
+
+                .box-tab{
+                    width: 220px;
+                    height: 117px;
+                    text-align: center;
+
+                    img{
+                        width: 135px;
+                        height: 130px;
+
+                    }
+
+                    h3{
+                        padding: 10px 0;
+                        color: white;
+                        font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+                    }
+
+                }
+
+            }
+        }
+
+        .Loders-parent{
+            width: 970px;
+            height: 400px;
+            margin: 0 auto;
+            position: relative;
+            top: -170px;
+            
+            .Loders{
+                width: 950px;
+                height: 345px;
+                background: url(../../../public/Imeg/numbers-bg.DPdpBnGO.png);
+                position: absolute;
+                padding: 50px 25px;
+                background-repeat: no-repeat;
+                border-radius: 15px;
+                z-index: 2;
+                // margin: 0 auto;
+
+                .loders-text{
+                    width: auto;
+                    text-align: center;
+
+                    h1{
+                        font-size: 55px;
+                        color: white;
+                        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                        font-weight: 600;
+                        letter-spacing: 2px;
+                    }
+
+                    hr{
+                        width: 50px;
+                        height: 5px;
+                        background: white;
+                        margin: 0 auto;
+
+                    }
+                }
+
+                .loders-box{
+                    width: 100%;
+                    height: auto;
+                    display: flex;
+                    justify-content: center;
+                    margin: 50px 0 0 0;
+
+                    .box{
+                        width: 25%;
+                        // border: 1px solid;
+                        text-align: center;
+                        line-height: 85px;
+
+                        h1{
+                            font-size: 85px;
+                            color: white;
+                            font-weight: 600;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+
+
+                        }
+                        p{
+                            color: white;
+                            font-size: 20px;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                            font-weight: 600;
+                        }
+                    }
+
+                }
+
+            }
+
+            .Loder-hr{
+                width: 100%;
+                height: 5px;
+                background: red;
+                position: absolute;
+                border: none;
+                bottom: 0;
+                // margin-top: 400px;
+            
+
+            }
+        }
+    
+
+
+    }
+
+    .services {
+        width: 1200px;
+        margin: 0 auto;
+        font-family: Arial, sans-serif;
+        // padding: 0 50px;
+        text-align: start;
+
+      
+        .services-text{
+            
+            // padding: 35px 0;
             h1{
                 font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
                 font-weight: 800;
-                font-size: 50px;
-                letter-spacing: 5px;
+                font-size: 40px;
+                letter-spacing: 2px;
                 padding: 10px 0;
                 // border-bottom: 2px solid red;
                 // border-bottom-width: 5px;
@@ -122,74 +475,158 @@ main{
 
             }
         }
+        // h1 {
+        //   font-size: 2.5rem;
+        //   margin-bottom: 10px;
+        //   color: #333;
+        // //   text-transform: uppercase;
+        //   position: relative;
+        //   color: black;
+      
+        //   // Tag chiziq
+        //   &::after {
+        //     // content: "";
+        //     // display: block;
 
-        .countes-parent{
+        //     width: 50px;
+        //     height: 4px;
+        //     background-color: red;
+        //     margin: 8px auto 0;
+        //   }
+        // }
+
+        .heth-hr{
+            width: 5px;
+            height: 40px;
+            background: red;
+            border: none;
+            margin-left: 20px;
+
+        }
+      
+        .buttons {
+          margin: 20px 0;
+      
+          button {
+            background-color: #333;
+            color: white;
+            padding: 10px 20px;
+            margin: 5px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s, transform 0.2s;
+      
+            &:hover {
+              background-color: #555;
+              transform: scale(1.05);
+              background-color: red;
+
+              
+            }
+      
+            &.active {
+              color: white;
+              border: 2px solid black;
+              background-color: red;
+
+            }
+          }
+        }
+      
+        .content {
+          margin-top: 20px;
+      
+          p {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            color: black;
+            font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
+          }
+        }
+      }
+      
+}
+@media screen and (max-width: 447px){
+  main{
+    width: 100%;
+    .Main-container{
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+
+
+        .main-text{
+            width: 100%;
+            text-align: center;
+            // font-size: 40px;
+
+            h1{
+                font-size: 40px;
+            }
+            hr{
+                margin: 0 auto;
+            }
+        }
+
+        .Main-about{
             width: 100%;
             height: auto;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            gap: 50px;
+            flex-direction: column;
 
-            .boxses{
-                width: 350px;
-                height: 255px;
-                overflow: hidden;
-                box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-                --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -4px rgba(0, 0, 0, .1);
-                --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-                border-radius: 20px 20px 0 0;
-                .box-img{
-                    width: 100%;
-                    height: 76%;
-                    overflow: hidden;
-                    border-radius: 20px 20px 0 0;
+            .about-text{
+                width: 100%;
+                padding: 0 15px;
+                text-align: center;
 
-                    img{
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        transition: transform 0.3s ease;
-
-                        &:hover{
-                            transform: scale(1.2); // Hoverda kattalashish
-                        }
-                    }
-               
-
-
+                hr{
+                    margin: 0 auto;
                 }
 
-                .box-title{
-                    width: 100%;
-                    height: 57px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    padding: 0 10px 0 35px;
-                    border-bottom: 3px solid red;
-
-                    h2{
-                        font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-                    }
-
-                    .img-slice{
-                        width: 80px;
-                        height: 45px;
-                        border-radius: 10px;
-                        box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-                        --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, .1), 0 4px 6px -4px rgba(0, 0, 0, .1);
-                        --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-                    }
+                p{
+                    font-size: 15px;
                 }
-                
-                
 
 
             }
-        
+            .about-img{
+                width: 100%;
+                height: 350px;
+                 display: flex;
+                 justify-content: center;
+                padding: 0 15px;
+                
+                img{
+                    width: 90%;
+                    height: 300px;
+                    margin: 0 auto;
+                    // margin: 0 auto;
+                }
+            }
+        }
+        .Main-countes{
+            width: 100%;
+            height: auto;
+            flex-direction: column;
+
+            .main-text{
+                h1{
+                    font-size: 40px;
+                }
+
+            }
+
+
+        }
+        .Main-excursion{
+            width: 100%;
+
+        }
+        .Main-client{
+            width: 100%;
         }
 
     }
-
+  }  
 }
