--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -450,7 +450,7 @@ main{
         width: 1200px;
         margin: 0 auto;
         font-family: Arial, sans-serif;
-        // padding: 0 50px;
+        padding: 0 50px;
         text-align: start;
 
       
