--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,20 @@
   scroll-behavior: smooth;
   
 }
+
+::-webkit-scrollbar {
+  width: 0px; /* Scrollbar kengligi */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Scrollbarning rangini o'rnatish */
+  border-radius: 10px; /* Scrollbar burchaklarini yumaloqlash */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Hover paytida scrollbar rangi */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Scrollbar trek rangi */
+}
