--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1000,14 +1000,14 @@ main{
 
     .Main-Priorities{
         width: 100%;
-        height: 1000px;
+        height: 1200px;
         // position: none;
         // margin: 80px 0;
 
 
         .priorities-parent{
             width: 100%;
-            height: 965px;
+            height: 1000px;
             padding: 30px 0;
 
 
@@ -1053,9 +1053,10 @@ main{
 
             .boxses{
                 width: 100%;
-                height: auto;
+                height: 300px;
                 flex-wrap: wrap;
                 padding: 0 35px;
+                // margin-bottom: 50px;
 
 
                 .box-tab{
@@ -1088,7 +1089,7 @@ main{
             height: 400px;
             margin: 0 auto;
             position: relative;
-            top: -370px;
+            top: -200px;
             display: flex;
             justify-content: center;
             
