--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -283,7 +283,7 @@ main{
         .priorities-parent{
             width: 100%;
             height: 750px;
-            background: url(../.././../public/Main-img/prioritet-bg.4VHDpVMf.png);
+            background: url(../.././../Main-img/prioritet-bg.4VHDpVMf.png);
             background-repeat: no-repeat;
             background-size: cover;
             padding: 100px ;
@@ -367,7 +367,7 @@ main{
             .Loders{
                 width: 950px;
                 height: 345px;
-                background: url(../../../public/Imeg/numbers-bg.DPdpBnGO.png);
+                background: url(../../../Imeg/numbers-bg.DPdpBnGO.png);
                 position: absolute;
                 padding: 50px 25px;
                 background-repeat: no-repeat;
