--- a/src/components/MainPlags/Plags.scss
+++ b/src/components/MainPlags/Plags.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     margin: 0;
     margin-top: 150px;
-    background: url(../../../public/Plags-swiper/work-bg.CrK2EIRA.png);
+    background: url(../../../Plags-swiper/work-bg.CrK2EIRA.png);
     background-size: cover;
     background-repeat: no-repeat;
     flex-direction: column;
