--- a/src/components/Main-swiper/Swiper.scss
+++ b/src/components/Main-swiper/Swiper.scss
@@ -77,11 +77,11 @@
     // align-items: center;
     
     .main-swiper{
-      width: 250px;
+      width: 220px;
       height: 220px;
 
       img{
-        width: 250px;
+        width: 100%;
         border-radius: 20px;
         object-fit: cover;
       }
