--- a/src/components/Main-swiper/Swiper.scss
+++ b/src/components/Main-swiper/Swiper.scss
@@ -81,7 +81,7 @@
       height: 220px;
 
       img{
-        width: 100%;
+        width: 250px;
         border-radius: 20px;
         object-fit: cover;
       }
