--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -108,6 +108,22 @@ nav{
         background-color: white;
         text-align: center;
 
+        .edit{
+            width: 40px;
+            height: 40px;
+            // background-color: red;
+            color: red;
+            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+            font-weight: 700;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 35px;
+        }
+
         ul{
             width: 100%;
             height: auto;
