--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -42,7 +42,7 @@ nav{
 
         }
         .nav-concet{
-            width: 550px;
+            width: auto;
             height: 100%;
             display: flex;
             align-items: center;
