--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,11 +21,12 @@
 
             .text{
                 width: 750px;
-                height: 131px;
+                height: auto;
                 background-color: rgb(0 0 0 / var(--tw-bg-opacity));
                 --tw-bg-opacity: 0.5;
                 display: flex;
                 margin: 0 auto;
+                padding: 15px;
 
                 h3{
                     tab-size: 4;
