--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -368,3 +368,195 @@ footer{
     
     }  
 }
+@media screen and (min-width: 447px) and (max-width: 769px) {
+    footer{
+        width: 100%;
+        height: auto;
+        background: #000000;
+        
+        .footer-container{
+            width: 100%;
+            height: auto;
+            margin: 0 auto;
+            padding: 0; 
+    
+            .footer-parent{
+                width: 100%;
+                height: auto;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-direction: column;
+             
+    
+                .footer-text{
+                    width: auto;
+                    margin: 25px 0;
+                    
+                    .text{
+                        text-align: center;
+                         h1{
+                            font-size: 35px;
+                            font-weight: 700;
+                            color: white;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                            padding: 10px 0;
+                         }
+                         hr{
+                            width: 50px;
+                            height: 4px;
+                            background: red;
+                            border: none;
+                            margin: 0 auto;
+    
+                         }
+                    }
+                    .call{
+                        width: auto;
+                        padding: 30px 0;
+                        text-align: start;
+                        flex-direction: column;
+                        text-align: center;
+    
+                        h3{
+                            color: white;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                            margin: 0 0 20px 0;
+                        }
+    
+                        a{
+                            // padding: 20px 0;
+                            color: white;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                        }
+                    }
+                    .tabs{
+                        width: auto;
+                        text-align: center;
+    
+                        h3{
+                            color: white;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                            font-weight: 600;
+                            margin: 0 0 15px 0;
+                        }
+    
+                        .tab{
+                            width: 100%;
+                            height: auto;
+                            display: flex;
+                            align-items: center;
+                            gap: 10px;
+                            text-align: center;
+                            // flex-direction: column;
+    
+    
+                            span{
+                                color: red;
+                                font-size: 35px;
+                            }
+    
+                            a{
+                                color: white;
+                                font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                                font-weight: 600;
+                                
+                            }
+                        }
+                    }
+    
+                }
+    
+                .footer-maps{
+                    width: auto;
+                    // padding: 0;
+    
+                    .inframe{
+                      width: 100%;
+                      height: 400px;
+                      border-radius: 20px;
+    
+    
+                    }
+                }
+                .footer-form{
+                    width: 70%;
+                    padding: 0 15px;
+    
+                    form{
+                        width: 100%;
+                        line-height: 65px;
+    
+                        h1{
+                            font-size: 35px;
+                            color: white;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    
+                        }
+    
+                        input{
+                            width: 100%;
+                            height: 45px;
+                            padding: 0 15px;
+                            outline: none;
+    
+                        }
+                        textarea{
+                            width: 100%;
+                            height: 200px;
+                            outline: none;
+                            padding: 15px;
+                        }
+                        button{
+                            width: 100%;
+                            height: 45px;
+                            border-radius: 12px;
+                            background: #D5192F;
+                            color: white;
+                            border: none;
+                            cursor: pointer;
+                            font-size: 16px;
+                            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    
+                        }
+    
+                    }
+                }
+    
+            }
+    
+        }
+    
+        .footer-end{
+            width: 100%;
+            height: 120px;
+            background: #111216;
+    
+            .container{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-direction: column;
+                margin: 0 auto;
+                padding:  20px;
+                text-align: center;
+    
+                h3{
+                    // font-size: 10px;
+                    color: white;
+                    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                }
+                p{
+                    color: white;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 17px;
+                }
+    
+            }
+    
+        }
+    
+    }  
+}
