--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 .Header-slider {
     width: 100%;
     height: 100%;
+    transition-duration: 2s;
 
     .header-slider-chiled{
         width: 100%;
@@ -79,6 +80,7 @@
 
       .header-slider-chiled{
         width: 100%;
+        height: 50vh;
 
         img{
           width: 100%;
@@ -109,6 +111,7 @@
 
       .header-slider-chiled{
         width: 100%;
+        height: 60vh;
 
         img{
           width: 100%;
@@ -131,4 +134,34 @@
 
     }
     
+  }
+  @media screen and (min-width: 769px) and (max-width: 990px) {
+    .Header-slider{
+      width: 100%;
+      height: auto;
+
+      .header-slider-chiled{
+        width: 100%;
+        height: 70vh;
+
+        img{
+          width: 100%;
+          object-fit: cover;
+        }
+         
+        .container{
+          .text{
+            width: 70%;
+            display: flex;
+            align-items: center;
+  
+            h3{
+              font-size: 30px;
+            }
+          }
+        }
+     
+      }
+
+    }
   }
