--- a/src/components/MainPlags/Plags.scss
+++ b/src/components/MainPlags/Plags.scss
@@ -249,3 +249,129 @@
       
 }
 }
+@media screen and (min-width: 447px) and (max-width: 769px) {
+  .Plags-container{
+    width: 100%;
+    display: flex;
+    height: 700px;
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+    margin-top: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    // gap: 10px;
+
+
+    .Plags-text{
+        width: 100%;
+        height: 200px;
+        margin: 0 auto;
+        padding: 0 90px;
+        text-align: center;
+
+
+        h1{
+            font-size: 45px;
+            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+            color: white;
+            margin: 40px 0 20px 0;
+        }
+        hr{
+            width: 50px;
+            height: 5px;
+            background: red;
+            border: none;
+            margin: 0 auto;
+
+        }
+    }
+
+    .corusel {
+      width: 100%;
+      display: flex;
+      height: 400px;
+      position: relative;
+      overflow: hidden;
+      margin: 0 auto;
+    //   margin-top: 50px;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      
+        .corusel-left {
+          width: 75%;
+          position: relative;
+      
+          .current-image {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+          }
+      
+          .carousel-button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            transition: opacity 0.3s;
+      
+            &.prev-button {
+              left: 10px;
+            }
+      
+            &.next-button {
+              right: 10px;
+            }
+      
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      
+        .corusel-right {
+          width: 20%;
+          height: 600px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          overflow: hidden;
+          overflow-y: scroll;
+        //   padding: 10px 0;
+          
+      
+          .miniature-container {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+      
+            .thumbnail {
+              width: 80%;
+              height: 80px;
+              object-fit: cover;
+              overflow: hidden;
+              cursor: pointer;
+              opacity: 0.7;
+              transition: transform 0.3s, opacity 0.3s;
+      
+              &.active-thumbnail {
+                opacity: 1;
+                transform: scale(1.1);
+              }
+      
+              &:hover {
+                opacity: 1;
+              }
+            }
+          }
+        }
+      }
+      
+}
+}
