--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     transition-duration: 2s;
+    margin-top: 80px;
 
     .header-slider-chiled{
         width: 100%;
