--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,10 +6,11 @@ nav{
     --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    // position: fixed;
+    position: fixed;
     top: 0;
     z-index: 5;
     overflow: hidden;
+    
     .container{
         width: 1300px;
         height: 80px;
@@ -119,6 +120,8 @@ nav{
         z-index: 4;
         background-color: white;
         text-align: center;
+        left: 0;
+        display: none;
 
         .edit{
             width: 40px;
