--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -172,7 +172,7 @@ nav{
         height: auto;
         // margin: 0 auto; 
         .container{
-            width: 100%;
+            width: auto;
             height: auto;
             display: flex;
             margin: 0 auto;
