--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -178,9 +178,10 @@ nav{
     nav{
         width: 100%;
         height: auto;
+        overflow: hidden;
         // margin: 0 auto; 
         .container{
-            width: auto;
+            width: 350px;
             height: auto;
             display: flex;
             margin: 0 auto;
