--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -181,11 +181,12 @@ nav{
         overflow: hidden;
         // margin: 0 auto; 
         .container{
-            width: 350px;
+            width: 100%;
             height: auto;
             display: flex;
             margin: 0 auto;
             justify-content: space-between;
+            overflow: hidden;
 
             
 
