--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -185,7 +185,7 @@ nav{
             height: auto;
             display: flex;
             margin: 0 auto;
-            justify-content: space-between;
+            justify-content: space-around;
             overflow: hidden;
 
             
