--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -71,9 +71,9 @@ nav {
           // font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
           font-size: 16px;
           padding: 10px 0;
+          display: inline-block;
           border-bottom: 2px solid transparent; /* Boshlang‘ich chiziq ko‘rinmaydi */
           transition: all 0.3s ease;
-
           &:hover {
             color: red; /* Matn rangi qizilga o‘zgaradi */
             border-bottom: 2px solid red;
@@ -168,7 +168,7 @@ nav {
     }
   }
 }
-@media screen and (max-width: 347px) {
+@media screen and (max-width: 447px) {
   nav {
     width: 100%;
     height: auto;
@@ -179,7 +179,7 @@ nav {
       height: auto;
       display: flex;
       margin: 0 auto;
-      justify-content: space-around;
+      justify-content: space-between;
       overflow: hidden;
 
       .nav-logo {
@@ -216,7 +216,7 @@ nav {
     }
   }
 }
-@media screen and (min-width: 347px) and (max-width: 769px) {
+@media screen and (min-width: 447px) and (max-width: 769px) {
   nav {
     width: 100%;
     height: auto;
