--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -449,7 +449,7 @@ main{
     }
 
     .services {
-        width: 1200px;
+        width: 1300px;
         margin: 0 auto;
         font-family: Arial, sans-serif;
         padding: 0 50px;
@@ -512,8 +512,8 @@ main{
           button {
             background-color: #333;
             color: white;
-            padding: 10px 20px;
-            margin: 5px;
+            padding: 10px 30px;
+            margin: 8px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -548,6 +548,21 @@ main{
           }
         }
       }
+     .btn-top{
+    
+        width: 50px;
+        height: 50px;
+        // background-color: red;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        z-index: 6;
+        
+
+        
+     } 
       
 }
 
