--- a/src/components/MainPlags/Plags.scss
+++ b/src/components/MainPlags/Plags.scss
@@ -146,10 +146,12 @@
 
 
         h1{
+          width: 100%;
             font-size: 45px;
             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
             color: white;
             margin: 40px 0 20px 0;
+            text-align: center;
         }
         hr{
             width: 50px;
