--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -123,9 +123,17 @@ footer{
                     }
                     textarea{
                         width: 100%;
-                        height: 200px;
+                        height: 150px;
                         outline: none;
                         padding: 15px;
+                        display: flex;
+                        align-items: center;
+                    }
+                    .fail{
+                        width: 100%;
+                        height: 40px;
+                        background: white;
+                        color: black;
                     }
                     button{
                         width: 100%;
