--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -174,6 +174,7 @@ nav {
     height: auto;
     overflow: hidden;
     // margin: 0 auto;
+
     .container {
       width: 100%;
       height: auto;
@@ -213,6 +214,12 @@ nav {
       .select-bars {
         display: flex;
       }
+    }
+
+    .Open{
+      width: 100%;
+      overflow: hidden;
+
     }
   }
 }
