--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -176,7 +176,7 @@ nav {
     // margin: 0 auto;
 
     .container {
-      width: 100%;
+      width: auto;
       height: auto;
       display: flex;
       margin: 0 auto;
