--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,7 @@
   width: 0px; /* Scrollbar kengligi */
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: #888; /* Scrollbarning rangini o'rnatish */
-  border-radius: 10px; /* Scrollbar burchaklarini yumaloqlash */
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Hover paytida scrollbar rangi */
-}
-
-::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Scrollbar trek rangi */
-}
+/*  */
 body{
   overflow: hidden;
   overflow-y: scroll;
