--- a/src/components/Main-swiper/Swiper.scss
+++ b/src/components/Main-swiper/Swiper.scss
@@ -11,6 +11,7 @@
     .main-swiper{
       width: 220px;
       height: 220px;
+      margin: 0;
 
       img{
         width: 250px;
@@ -57,6 +58,7 @@
     .main-swiper{
       width: 220px;
       height: 220px;
+      margin: 0;
 
       img{
         width: 250px;
