--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -251,7 +251,7 @@ nav {
         }
       }
       .nav-concet {
-        width: 100px;
+        width: auto;
 
         ul {
           display: none;
