--- a/src/components/Main-swiper/Swiper.scss
+++ b/src/components/Main-swiper/Swiper.scss
@@ -53,7 +53,8 @@
     margin: 0 auto;
     overflow: hidden;
     display: flex;
-    // align-items: center;
+    padding: 0;
+    margin: 0;    // align-items: center;
     
     .main-swiper{
       width: 220px;
