--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -169,80 +169,29 @@ nav {
   }
 }
 @media screen and (max-width: 447px) {
-  // nav {
-  //   width: 100%;
-  //   height: auto;
-  //   overflow: hidden;
-  //   margin: 0 auto;
-
-  //   .container {
-  //     width: 100%;
-  //     height: auto;
-  //     display: flex;
-  //     margin: 0 auto;
-  //     justify-content: space-between;
-  //     overflow: hidden;
-
-  //     .nav-logo {
-  //       width: auto;
-  //       img {
-  //         width: 80px;
-  //       }
-  //     }
-  //     .nav-img {
-  //       width: 100%;
-  //       right: 0;
-
-  //       img {
-  //         width: 100%;
-  //         // left: 30%;
-  //         // margin: 0 auto;
-  //       }
-  //     }
-  //     .nav-concet {
-  //       width: 100px;
-
-  //       ul {
-  //         display: none;
-  //       }
-
-  //       select {
-  //         // width: 50px;
-  //         display: none;
-  //       }
-  //     }
-  //     .select-bars {
-  //       display: flex;
-  //     }
-  //   }
-
-  //   .Open{
-  //     width: 100%;
-  //     overflow: hidden;
-
-  //   }
-  // }
   nav {
     width: 100%;
     height: auto;
     overflow: hidden;
-    // margin: 0 auto;
+    margin: 0 auto;
+
     .container {
       width: 100%;
       height: auto;
       display: flex;
       margin: 0 auto;
       justify-content: space-between;
+      overflow: hidden;
 
       .nav-logo {
-        width: 90px;
+        width: auto;
         img {
-          width: 100%;
+          width: 80px;
         }
       }
       .nav-img {
-        width: 70%;
-        left: 20%;
+        width: 100%;
+        right: 0;
 
         img {
           width: 100%;
@@ -251,19 +200,70 @@ nav {
         }
       }
       .nav-concet {
-        display: none;
+        width: 100px;
 
-    
+        ul {
+          display: none;
+        }
+
+        select {
+          // width: 50px;
+          display: none;
+        }
       }
       .select-bars {
         display: flex;
       }
     }
+
+    .Open{
+      width: 100%;
+      overflow: hidden;
+
+    }
   }
-  .Open{
-    width: 100%;
-    overflow: hidden;
-  }
+  // nav {
+  //   width: 100%;
+  //   height: auto;
+  //   overflow: hidden;
+  //   // margin: 0 auto;
+  //   .container {
+  //     width: 100%;
+  //     height: auto;
+  //     display: flex;
+  //     margin: 0 auto;
+  //     justify-content: space-between;
+
+  //     .nav-logo {
+  //       width: 90px;
+  //       img {
+  //         width: 100%;
+  //       }
+  //     }
+  //     .nav-img {
+  //       width: 70%;
+  //       left: 20%;
+
+  //       img {
+  //         width: 100%;
+  //         // left: 30%;
+  //         // margin: 0 auto;
+  //       }
+  //     }
+  //     .nav-concet {
+  //       display: none;
+
+    
+  //     }
+  //     .select-bars {
+  //       display: flex;
+  //     }
+  //   }
+  // }
+  // .Open{
+  //   width: 100%;
+  //   overflow: hidden;
+  // }
 }
 @media screen and (min-width: 447px) and (max-width: 769px) {
   nav {
@@ -284,11 +284,12 @@ nav {
         }
       }
       .nav-img {
-        width: 100%;
+        width: 90%;
         right: 0;
 
         img {
           width: 100%;
+          object-fit: cover;
           // left: 30%;
           // margin: 0 auto;
         }
