--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,7 @@
     height: 100%;
     transition-duration: 2s;
     margin-top: 70px;
+    overflow: hidden;
 
     .header-slider-chiled{
         width: 100%;
