--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,7 @@ footer{
     width: 100%;
     height: 680px;
     background: #000000;
+    overflow: hidden;
     
     .footer-container{
         width: 1300px;
