--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,6 +1,7 @@
 main{
     width: 100%;
     height: auto;
+    overflow: hidden;
     
 
     .Main-container{
@@ -571,10 +572,10 @@ main{
 main{
     width: 100%;
     height: auto;
-    
+    overflow: hidden;
 
     .Main-container{
-        width: 100%;
+        width: 100% !important;
         height: auto;
         margin: 0 auto;
         flex-direction: column;
